@@ -8,32 +8,32 @@ if (!defined('SMF'))
 function generatePrettyUrl($text)
 {
 	static $characterHash = array (
-		'a'	=>	array ('a', 'A', 'à', 'À', 'á', 'Á', 'â', 'Â', 'ã', 'Ã', 'ä', 'Ä', 'å', 'Å', 'ª'),
+		'a'	=>	array ('a', 'A', 'à', 'À', 'á', 'Á', 'â', 'Â', 'ã', 'Ã', 'ä', 'Ä', 'å', 'Å', 'ª', 'ą', 'Ą'),
 		'b'	=>	array ('b', 'B'),
-		'c'	=>	array ('c', 'C', 'ç', 'Ç'),
+		'c'	=>	array ('c', 'C', 'ç', 'Ç', 'ć', 'Ć'),
 		'd'	=>	array ('d', 'D', 'Ð'),
-		'e'	=>	array ('e', 'E', 'è', 'È', 'é', 'É', 'ê', 'Ê', 'ë', 'Ë'),
+		'e'	=>	array ('e', 'E', 'è', 'È', 'é', 'É', 'ê', 'Ê', 'ë', 'Ë', 'ę', 'Ę'),
 		'f'	=>	array ('f', 'F'),
 		'g'	=>	array ('g', 'G', 'ğ', 'Ğ'),
 		'h'	=>	array ('h', 'H'),
 		'i'	=>	array ('i', 'I', 'ì', 'Ì', 'í', 'Í', 'î', 'Î', 'ï', 'Ï', 'ı', 'İ'),
 		'j'	=>	array ('j', 'J'),
 		'k'	=>	array ('k', 'K'),
-		'l'	=>	array ('l', 'L'),
+		'l'	=>	array ('l', 'L', 'ł', 'Ł'),
 		'm'	=>	array ('m', 'M'),
-		'n'	=>	array ('n', 'N', 'ñ', 'Ñ'),
+		'n'	=>	array ('n', 'N', 'ñ', 'Ñ', 'ń', 'Ń'),
 		'o'	=>	array ('o', 'O', 'ò', 'Ò', 'ó', 'Ó', 'ô', 'Ô', 'õ', 'Õ', 'ö', 'Ö', 'ø', 'Ø', 'º'),
 		'p'	=>	array ('p', 'P'),
 		'q'	=>	array ('q', 'Q'),
 		'r'	=>	array ('r', 'R', '®'),
-		's'	=>	array ('s', 'S', 'ş', 'Ş'),
+		's'	=>	array ('s', 'S', 'ş', 'Ş', 'ś', 'Ś'),
 		't'	=>	array ('t', 'T'),
 		'u'	=>	array ('u', 'U', 'ù', 'Ù', 'ú', 'Ú', 'û', 'Û', 'ü', 'Ü', 'µ'),
 		'v'	=>	array ('v', 'V'),
 		'w'	=>	array ('w', 'W'),
 		'x'	=>	array ('x', 'X', '×'),
 		'y'	=>	array ('y', 'Y', 'ý', 'Ý', 'ÿ'),
-		'z'	=>	array ('z', 'Z'),
+		'z'	=>	array ('z', 'Z', 'ż', 'Ż', 'ź', 'Ź'),
 		'-'	=>	array ('-', ' ', '.', ','),
 		'_'	=>	array ('_'),
 		'0'	=>	array ('0'),
